Finish search ui

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
         .row
             form.form-horizontal(action="search" method="post" role="form")
                 .input-group.col-md-8.col-md-offset-2
-                    input.form-control(type="text" autofocus="autofocus")
+                    input.form-control(type="text" autofocus="autofocus" name="filmName")
                     .input-group-btn
                         button.btn.btn-primary(type="submit") 搜索
         .row(style='text-align:center;')
