--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,7 @@ html
         link(rel='stylesheet', href='/stylesheets/mystyle.css')
         script(src='/javascripts/jquery.min.js')
         script(src='/javascripts/bootstrap.min.js')
-        meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
+        meta(http-equiv="Content-Type" content="text/html; charset=gb2312")
     body
         .navbar.my-navbar-default.navbar-fixed-top(role='navigation')
             .container
