Add filmshare handler

--- a/views/index.jade
+++ b/views/index.jade
@@ -73,5 +73,6 @@ block content
                     button.btn.btn-primary 保存
     #footer
         p.text-center 123456@copyright
+    script(type='text/javascript', src='/js/userclick.js')        
 
 
