--- a/views/recommend.jade
+++ b/views/recommend.jade
@@ -60,6 +60,7 @@ block content
         p.text-center 123456@copyright
 
     
-    script(src='/javascripts/footer.js')    
+    script(src='/javascripts/footer.js')
+    script(type='text/javascript', src='/js/userclick.js')
 
 
